bg changed, dashboard and connection pending

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body style="background-color: #5cdb95">
+<body style="background: url(./assets/bg.jpg);">
   <app-root></app-root>
 </body>
 </html>
