--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body style="background: url(./assets/bg.jpg);">
