redo whole frontend

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,16 @@
   <meta charset="utf-8">
   <title>MEAN App</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <base href="/">
-
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+
+
 </head>
-<body style="background: url(./assets/bg.jpg);">
+<body>
   <app-root></app-root>
 </body>
 </html>
